# cckex

./: .gitignore  README.md
kernel-kexfil/: .gitignore  Makefile  README.md  compose.yaml
kernel-kexfil/capture/appium/: fixedchard.py  onechar.py  randomchar.py  signal_test.py  tb3.py  test.py
kernel-kexfil/capture/frida/captures/: Makefile  README.md  capture.sh  cleanup.sh  dump_tls_mastersecrets.sh  extract_encrypted_message.sh  hardware_capture.sh  new_capture.sh  new_manual_capture.sh  parse_logcat_output.sh  run_friTap_Signal.sh  setup_eval.sh
kernel-kexfil/capture/frida/captures/configs/: config.json  hardware_config.json
kernel-kexfil/capture/frida/captures/example/: _cap.pcap
kernel-kexfil/capture/frida/captures/pkg_decrypt/: cckeydump.py  pcapdecrypt.py  sigpkgdecrypt.py
kernel-kexfil/capture/frida/friTap/friTap/: _ssl_log.js  friTap.py
kernel-kexfil/capture/frida/scripts/signal_injector/: attach_to_signal.sh  init.js  signal_injector.js
kernel-kexfil/docker/: Dockerfile  aarch64-build-entrypoint.sh  demo-entrypoint.sh  recompile-entrypoint.sh  recompile-hw-entrypoint.sh  setup-demo-env.sh  setup-entrypoint.sh  setup-hw-entrypoint.sh
kernel-kexfil/share/: ccsetup
kernel-kexfil/src/: build_custom_aarch64_kernel.py  build_custom_kernel.py  create_and_run_emulator.sh  deploy_pixel_kernel.sh
kernel-kexfil/src/ccsetup/: Makefile  ccsetup
kernel-kexfil/src/ccsetup/jni/: Android.mk  Application.mk  argh.h  ccsetup.cc  json.hpp
kernel-kexfil/src/custom_kernel_module/: Kbuild  Kconfig  Makefile  cckex.c  chardev.c  chardev.h  common.c  common.h
kernel-kexfil/src/custom_kernel_module/cc/: cc_common.h  cchandler.c  cchandler.h  ccmethod.c  ccmethod.h
kernel-kexfil/src/custom_kernel_module/crypto/hkdf/: hkdf.c  hkdf.h
kernel-kexfil/src/custom_kernel_module/crypto/hmac/: hmac_sha2.c  sha2.c
kernel-kexfil/src/custom_kernel_module/crypto/legacy/: hmac_sha256.c  hmac_sha256.h  sha256.c  sha256.h
kernel-kexfil/src/custom_kernel_module/keys/: priv.der  priv.pem  pub.der  pub.pem  rsa.py  test.hex  test.raw
kernel-kexfil/src/custom_kernel_module/net/: _base64.h  base64.c  base64.h  connection_list.c  connection_list.h  dns.c  dns.h  filter.c  filter.h  heur_filter.c  heur_filter.h  signal_message.c  signal_message.h  tls.c  tls.h  tls_crypto.c  tls_crypto.h  websocket.c  websocket.h
kernel-kexfil/src/custom_kernel_module/signal/protobuf/: protobuf.c  protobuf.h
wireshark-plugin/: CMakeLists.txt  Makefile  README.md  compose.yaml  wireshark.patch
wireshark-plugin/docker/: Dockerfile  build-entrypoint.sh  init-entrypoint.sh
wireshark-plugin/protowire/: SignalService.proto  ccKexCustomMessages.proto
wireshark-plugin/src/: CMakeLists.txt  CMakeLists.txt.nowork  base64.h  common.cc  common.h  packet-ccKex.c
wireshark-plugin/src/dissectors/: exfil_dissector.cc  exfil_dissector.h  signal_message_dissector.c  signal_message_dissector.h  signal_sealed_sender_dissector.c  signal_sealed_sender_dissector.h  signal_websocket_dissector.c  signal_websocket_dissector.h
wireshark-plugin/src/extraction/: CMakeLists.txt  ccdataextraction.cc  ccdataextraction.h  ccdatamanager.cc  ccdatamanager.h
wireshark-plugin/src/extraction/keytypes/: ccbuffer.cc  ccbuffer.h  signal_common.h  signal_message_key.cc  signal_message_key.h  signal_sealed_sender_key.cc  signal_sealed_sender_key.h  tls_client_traffic_secret.cc  tls_client_traffic_secret.h  tls_common.h  tls_server_traffic_secret.cc  tls_server_traffic_secret.h
wireshark-plugin/src/message_dissection/: CMakeLists.txt  keylist.h  signalmessagecrypto.cc  signalmessagecrypto.h  signalmessagedissectors.c  signalmessagedissectors.h
wireshark-plugin/src/stats/: acc_size_of_exfil_payload_over_pkgs.plot  boxplot_cc_message_size.plot  boxplot_cc_share_percent.plot  cckex_stats.cc  cckex_stats.h
wireshark-plugin/src/ui/: cctab.cc  cctab.h  configtab.cc  configtab.h  keyhighlighter.cc  keyhighlighter.h  keysfiletab.cc  keysfiletab.h  keytablewidget.cc  keytablewidget.h  mainpluginui.cc  mainpluginui.h  maintab.cc  maintab.h  messagetab.cc  messagetab.h  uihandler.cc  uihandler.h
